--- a/EnglishPatch/EnglishPatch.csproj
+++ b/EnglishPatch/EnglishPatch.csproj
@@ -20,6 +20,7 @@
     <PackageReference Include="BepInEx.Analyzers" Version="1.*" PrivateAssets="all" />
     <PackageReference Include="BepInEx.Core" Version="5.*" />
     <PackageReference Include="BepInEx.PluginInfoProps" Version="2.*" />
+    <PackageReference Include="LitJson" Version="0.19.0" />
     <PackageReference Include="UnityEngine.Modules" Version="2022.1.0" IncludeAssets="compile" />
   </ItemGroup>
 
