--- a/Files/Glossary.yaml
+++ b/Files/Glossary.yaml
@@ -1874,6 +1874,11 @@
   literal: Pu Tong  
 
 # Items and Minerals
+- raw: 一气茯神丹
+  result: Unity Poria Elixir
+  badtrans: true
+  direct: Yiqi Fushen Dan
+  literal: Yiqi Fushen Dan
 - raw: 霸刀  
   result: Dominator Blade  
   badtrans: true  
@@ -1889,7 +1894,6 @@
   badtrans: true  
   direct: Haoxing Hanri Dao  
   literal: Haoxing Hanri Dao  
-
 - raw: 钱
   result: Coin
   allowalt: 
