--- a/Files/ManualTranslations.yaml
+++ b/Files/ManualTranslations.yaml
@@ -387,6 +387,21 @@
   badtrans: true
   direct: Yi shi Ren de yanshen he tixian, shi renmen duiyu ren'ai, renxin, rende de shijian he biaoda.
   literal: Yi shi Ren de yanshen he tixian, shi renmen duiyu ren'ai, renxin, rende de shijian he biaoda.
+- raw: 金拍得
+  result: Gold Auctioned
+  badtrans: true
+  direct: Jin pai de
+  literal: Jin pai de
+- raw: 《道德经》中的“上善若水”是什么意思？
+  result: "What does 'The greatest good is like water' mean in the 'Tao Te Ching'?"
+  badtrans: true
+  direct: Dao De Jing zhong de shang shan ruo shui shi shenme yisi?
+  literal: Dao De Jing zhong de shang shan ruo shui shi shenme yisi?
+- raw: 《道德经》中“人法地，地法天，天法道，道法自然”指什么？
+  result: "What does the phrase 'People follow the Earth, the Earth follows Heaven, Heaven follows the Tao, and the Tao follows Nature' mean in the Tao Te Ching?"
+  badtrans: true
+  direct: Zhuangzi zhong 'Ren fa di, di fa tian, tian fa dao, dao fa ziran' zhi shenme?
+  literal: Tao Te Ching zhong 'Ren fa di, di fa tian, tian fa dao, dao fa ziran' zhi shenme?
 
 # Questions
 - raw: 戒定慧
