Resizer clean up

--- a/Files/Glossary.yaml
+++ b/Files/Glossary.yaml
@@ -1874,6 +1874,11 @@
   literal: Pu Tong  
 
 # Items and Minerals
+- raw: 乌草  
+  result: Black Grass  
+  badtrans: true  
+  direct: Black Grass  
+  literal: Wu Cao  
 - raw: 一气茯神丹
   result: Unity Poria Elixir
   badtrans: true
