--- a/Files/ManualTranslations.yaml
+++ b/Files/ManualTranslations.yaml
@@ -402,6 +402,21 @@
   badtrans: true
   direct: Zhuangzi zhong 'Ren fa di, di fa tian, tian fa dao, dao fa ziran' zhi shenme?
   literal: Tao Te Ching zhong 'Ren fa di, di fa tian, tian fa dao, dao fa ziran' zhi shenme?
+- raw: 不云潜  
+  result: Bu Yun Qian  
+  badtrans: true  
+  direct: Not Cloud Hidden  # Its a fish
+  literal: Bu Yun Qian  
+- raw: 赏  
+  result: Bounty  
+  badtrans: true  
+  direct: Reward  
+  literal: Shang  
+- raw: 奇  
+  result: Strange
+  badtrans: true  
+  direct: Strange  
+  literal: Qi  
 
 # Questions
 - raw: 戒定慧
