Clean up and Update readme

--- a/Files/Glossary.yaml
+++ b/Files/Glossary.yaml
@@ -4,6 +4,11 @@
   badtrans: true  
   direct: Double-click  
   literal: Shuangji  
+- raw: 心法  
+  result: Heart Method  
+  badtrans: true  
+  direct: Heart Method  
+  literal: Xin Fa  
 - raw: 武侠
   result: Wuxia
   badtrans: true
@@ -15,7 +20,7 @@
   allowalt:
     - Gossip
     - Rumors
-  badtrans: true  
+  badtrans: true
 - raw: 武林
   result: Wulin
   allowalt: 
