--- a/Files/ManualTranslations.yaml
+++ b/Files/ManualTranslations.yaml
@@ -1,4 +1,15 @@
-﻿
+﻿- raw: 融会贯通  
+  result: Integrate and Connect  
+  badtrans: true  
+  direct: Integrate and Connect  
+  literal: Rong Hui Guan Tong  
+- raw: 牛皮  
+  result: Bullhide  
+  badtrans: true  
+  direct: Cowhide  
+  literal: Niu Pi  
+
+
 # Skills
 - raw: <color=#E7BF87>北冥玄拳：</color><color=#DADBD5>切换到<color=#FF9971>拳</color>套路后5秒内提升10%要害属性，减少5%所受伤害。</color>
   result: <color=#E7BF87>Northern Abyss Fist:</color><color=#DADBD5> After switching to the <color=#FF9971>Fist</color> style, increase Critical Attribute by 10% for 5 seconds and reduce damage taken by 5%.</color>
@@ -457,7 +468,87 @@
   direct: Yuan Yin  
   literal: Yuan Yin
 
-# Names   
+# Names
+- raw: 步琪  
+  result: Bu Qi  
+  badtrans: true  
+  direct: Step Jade  
+  literal: Bu Qi  
+- raw: 向秋柏  
+  result: Xiang Qiubai  
+  badtrans: true  
+  direct: Toward Autumn Cypress  
+  literal: Xiang Qiubai  
+- raw: 乌孙行  
+  result: Wu Sunxing  
+  badtrans: true  
+  direct: Black Grandson Walk  
+  literal: Wu Sun Xing  
+- raw: 花安  
+  result: Hua An  
+  badtrans: true  
+  direct: Flower Peace  
+  literal: Hua An  
+- raw: 碧宇  
+  result: Biyu  
+  badtrans: true  
+  direct: Jade Sky  
+  literal: Bi Yu  
+- raw: 任柯  
+  result: Ren Ke  
+  badtrans: true  
+  direct: Trust Branch  
+  literal: Ren Ke  
+- raw: 陀学智  
+  result: Tuo Xuezhi  
+  badtrans: true  
+  direct: Tuo Study Wisdom  
+  literal: Tuo Xue Zhi  
+- raw: 金半两  
+  result: Jin Banliang  
+  badtrans: true  
+  direct: Gold Half Tael  
+  literal: Jin Ban Liang  
+- raw: 李味道  
+  result: Li Weidao  
+  badtrans: true  
+  direct: Plum Flavor  
+  literal: Li Weidao  
+- raw: 东门木  
+  result: Dong Menmu  
+  badtrans: true  
+  direct: East Gate Wood  
+  literal: Dong Men Mu  
+- raw: 空明  
+  result: Kong Ming  
+  badtrans: true  
+  direct: Empty Brightness  
+  literal: Kong Ming  
+- raw: 镜观  
+  result: Jing Guan  
+  badtrans: true  
+  direct: Mirror Observation  
+  literal: Jing Guan  
+- raw: 全罡  
+  result: Quan Gang  
+  badtrans: true  
+  direct: Complete Magnetic Field  
+  literal: Quan Gang  
+- raw: 卧竹  
+  result: Wo Zhu  
+  badtrans: true  
+  direct: Reclining Bamboo  
+  literal: Wo Zhu  
+- raw: 澄道  
+  result: Cheng Dao  
+  badtrans: true  
+  direct: Clear Path  
+  literal: Cheng Dao  
+
+
+
+
+
 - raw: 廉冯  
   result: Lian Feng  
   badtrans: true  
