--- a/Files/Glossary.yaml
+++ b/Files/Glossary.yaml
@@ -1,4 +1,9 @@
 ﻿# Terms
+- raw: 流民  
+  result: Refugee  
+  badtrans: true  
+  direct: Displaced people  
+  literal: Liu min  
 - raw: 双击
   result: Double-tap
   badtrans: true  
@@ -1877,8 +1882,35 @@
   badtrans: false  
   direct: Pu Tong  
   literal: Pu Tong  
+- raw: 段将军  
+  result: General Duan  
+  badtrans: true  
+  direct: Duan General  
+  literal: Duan jiangjun  
+- raw: 关涿  
+  result: Guan Zhuo  
+  badtrans: true  
+  direct: Guan Zhuo  
+  literal: Guan Zhuo
+- raw: 段鸿鸣  
+  result: Duan Hongming  
+  badtrans: true  
+  direct: Duan Hongming  
+  literal: Duan Hongming 
+- raw: 灵均  
+  result: Ling Jun  
+  badtrans: true  
+  direct: Lingjun  
+  literal: Lingjun  
+
+
 
 # Items and Minerals
+- raw: 乌丝甲  
+  result: Black Silk Armor  
+  badtrans: true  
+  direct: Black Silk Armor  
+  literal: Wu si jia  
 - raw: 乌草  
   result: Black Grass  
   badtrans: true  
