--- a/Files/Glossary.yaml
+++ b/Files/Glossary.yaml
@@ -2355,6 +2355,8 @@
 - raw: 贡献堂主
   result: Contribution Hall Master
   badtrans: true
+  allowalt: 
+    - Contributions Hall Master
 - raw: 副帮主
   result: Deputy Chief
   badtrans: true
