--- a/Files/ManualTranslations.yaml
+++ b/Files/ManualTranslations.yaml
@@ -495,6 +495,11 @@
   literal: Yuan Yin
 
 # Names
+- raw: 万剑归  
+  result: Wan Jiangui  
+  badtrans: true  
+  direct: Ten thousand swords return  
+  literal: Wan jian gui  
 - raw: 苦不苦  
   result: Ku Buku
   badtrans: true  
