--- a/Files/ManualTranslations.yaml
+++ b/Files/ManualTranslations.yaml
@@ -33,7 +33,31 @@
   badtrans: true  
   direct: Okay. Guan Zhuo, do you want a piece?  
   literal: Ye hao. Guan Zhuo ni yao yi kuai ma?  
-
+- raw: 蜀道穿云立，巴山裂石击。  
+  result: The Sichuan Path pierces the clouds, the Ba Mountains split rocks with their strikes.  
+  badtrans: true  
+  direct: Shu Path stands piercing clouds, Ba Mountains strike splitting rocks.  
+  literal: Shu dao chuan yun li, Ba shan lie shi ji.  
+- raw: 余晖谭石像西  
+  result: Sunset Reflecting on Tan's Stone Statue in the West  
+  badtrans: true  
+  direct: Afterglow Tan stone statue west  
+  literal: Yuhui Tan shixiang xi  
+- raw: 金半两野外  
+  result: Jin Banliang Wilderness  
+  badtrans: true  
+  direct: Jin Banliang Wilds  
+  literal: Jin Banliang Yewai 
+- raw: 陈易野外  
+  result: Chen Yi Wilderness  
+  badtrans: true  
+  direct: Chen Yi Wilds  
+  literal: Chen Yi Yewai  
+- raw: 对话npc  
+  result: Talk to NPC  
+  badtrans: true  
+  direct: Dialogue NPC  
+  literal: Duihua NPC  
 
 
 # Skills
@@ -495,6 +519,26 @@
   literal: Yuan Yin
 
 # Names
+- raw: 苗善和  
+  result: Miao Shanhe  
+  badtrans: true  
+  direct: Miao Shanhe  
+  literal: Miao Shanhe  
+- raw: 栋堂  
+  result: Dong Tang  
+  badtrans: true  
+  direct: Dongtang  
+  literal: Dongtang  
+- raw: 居民  
+  result: Resident  
+  badtrans: true  
+  direct: Resident  
+  literal: Jumin  
+- raw: 出长逸  
+  result: Chu Changyi  
+  badtrans: true  
+  direct: Go out, long ease  
+  literal: Chu chang yi  
 - raw: 万剑归  
   result: Wan Jiangui  
   badtrans: true  
