Clean up big hallucinations

--- a/Files/Glossary.yaml
+++ b/Files/Glossary.yaml
@@ -1906,6 +1906,11 @@
 
 
 # Items and Minerals
+- raw: 明心见性丹
+  result: Mind-clearing and nature-revealing pill
+  badtrans: true
+  direct: Ming xin jian xing dan
+  literal: Ming xin jian xing dan
 - raw: 乌丝甲  
   result: Black Silk Armor  
   badtrans: true  
@@ -2585,7 +2590,7 @@
 - raw: 三儿
   result: San'er
   badtrans: true
-  allowAlt:
+  allowalt:
     - Third child
 - raw: 昕儿
   result: Xin'er  
