More tidy up of hallucinations

--- a/Files/ManualTranslations.yaml
+++ b/Files/ManualTranslations.yaml
@@ -58,7 +58,87 @@
   badtrans: true  
   direct: Dialogue NPC  
   literal: Duihua NPC  
-
+- raw: 多闻
+  result: Well-informed
+  badtrans: true
+  direct: Duo wen
+  literal: Duo wen
+- raw: 米摊
+  result: Rice stall
+  badtrans: true
+  direct: Mi tan
+  literal: Mi tan
+- raw: 南人
+  result: Southerner
+  badtrans: true
+  direct: Nan ren
+  literal: Nan ren
+- raw: "在对抗有优势火力的敌人时，兵家的常用战术是："
+  result: "The common tactic used by military strategists when facing an enemy with superior firepower is:"
+  badtrans: true
+  direct: Zai dui kang you you shi huo li de di ren shi, bing jia de chang yong zhan shu shi
+  literal: Zai dui kang you you shi huo li de di ren shi, bing jia de chang yong zhan shu shi
+- raw: 缝纫中的“锁边”是指什么？
+  result: What does 'overlocking' refer to in sewing?
+  badtrans: true
+  direct: Feng ren zhong de 'suo bian' shi zhi shen me?
+  literal: Feng ren zhong de 'suo bian' shi zhi shen me?
+- raw: 缝纫中的“锁线”是指什么？
+  result: What does 'locking stitch' refer to in sewing?
+  badtrans: true
+  direct: Feng ren zhong de 'suo xian' shi zhi shen me?
+  literal: Feng ren zhong de 'suo xian' shi zhi shen me?
+- raw: 中国古代丝绸之路的开辟对纺织技术有何影响？
+  result: What impact did the opening of the ancient Silk Road have on textile technology in China?
+  badtrans: true
+  direct: Zhong guo gu dai si chou zhi lu de kai pi dui fang zhi ji shu you he ying xiang?
+  literal: Zhong guo gu dai si chou zhi lu de kai pi dui fang zhi ji shu you he ying xiang?
+- raw: 老子在《道德经》中如何定义“道”？
+  result: How does Laozi define 'Dao' in the Tao Te Ching?
+  badtrans: true
+  direct: Lao zi zai 'Dao De Jing' zhong ru he ding yi 'dao'?
+  literal: Lao zi zai 'Dao De Jing' zhong ru he ding yi 'dao'?
+- raw: 老子如何解释“柔弱胜刚强”？
+  result: How does Laozi explain 'Softness and weakness overcome strength and firmness'?
+  badtrans: true
+  direct: Lao zi ru he jie shi 'rou ruo sheng gang qiang'?
+  literal: Lao zi ru he jie shi 'rou ruo sheng gang qiang'?
+- raw: 道可名
+  result: Dao that can be named
+  badtrans: true
+  direct: Dao ke ming
+  literal: Dao ke ming
+- raw: 游刃
+  result: Move Effortlessly
+  badtrans: true
+  direct: You ren
+  literal: You ren
+- raw: 武灭
+  result: Martial destruction
+  badtrans: true
+  direct: Wu mie
+  literal: Wu mie
+- raw: 《庄子》中“庖丁解牛”故事的核心是什么？
+  result: What is the core of the 'Cook Ding cutting the ox' story in the Zhuangzi?
+  badtrans: true
+- raw: 《庄子》中“无待之乐”指的是什么？
+  result: What does 'the joy of no dependence' refer to in the Zhuangzi?
+  badtrans: true
+- raw: 茅山派的“龙脉”理论指的是什么？
+  result: What does the 'Dragon vein' theory of the Maoshan sect refer to?
+  badtrans: true
+- raw: 全真派在修炼中提到的“五气”指的是什么？
+  result: What do the 'Five Energies' mentioned in the cultivation of the Quanzhen sect refer to?
+  badtrans: true
+- raw: 全真派与道教的“丹道”有何关系？
+  result: What is the relationship between the Quanzhen sect and the Taoist 'Elixir Way'?
+  badtrans: true
+- raw: 孟子如何描述“求其放心”？
+  result: How does Mencius describe 'seeking peace of mind'?
+  badtrans: true
+- raw: 《大学》中的“八条目”包括哪些？
+  result: What are the 'Eight Articles' in the 'Great Learning'?
+  badtrans: true
 
 # Skills
 - raw: <color=#E7BF87>北冥玄拳：</color><color=#DADBD5>切换到<color=#FF9971>拳</color>套路后5秒内提升10%要害属性，减少5%所受伤害。</color>
@@ -596,10 +676,76 @@
   badtrans: true
   direct: Chu shi
   literal: Chu shi
-
-
-
-
+- raw: 因循
+  result: Follow routine
+  badtrans: true
+  direct: Yin xun
+  literal: Yin xun
+- raw: 参悟
+  result: Comprehend
+  badtrans: true
+  direct: Can wu
+  literal: Can wu
+- raw: 结仇
+  result: Make an enemy
+  badtrans: true
+  direct: Jie chou
+  literal: Jie chou
+- raw: 酉
+  result: Rooster
+  badtrans: true
+  direct: You
+  literal: You
+- raw: 增筑
+  result: Increase construction
+  badtrans: true
+  direct: Zeng zhu
+  literal: Zeng zhu
+- raw: 斩工时佛挡杀佛水电
+  result: During work, one must be a sword that cleaves through obstacles; otherwise, it's akin to a Buddhist killing off another, disrupting progress and efficiency.
+  badtrans: true
+  direct: Zhan gong shi fo dang sha fo shui dian
+  literal: Zhan gong shi fo dang sha fo shui dian
+- raw: 对话张星星
+  result: Dialogue with Zhang Xingxing
+  badtrans: true
+  direct: Dui hua Zhang Xingxing
+  literal: Dui hua Zhang Xingxing
+- raw: 遁玄
+  result: Escape into mystery
+  badtrans: true
+  direct: Dun xuan
+  literal: Dun xuan
+- raw: 望尘切磋胜
+  result: Strive to surpass by observing and learning
+  badtrans: true
+  direct: Wang chen qie cuo sheng
+  literal: Wang chen qie cuo sheng
+- raw: 破浪
+  result: Break through the waves
+  badtrans: true
+  direct: Po lang
+  literal: Po lang
+- raw: 木桶
+  result: Wooden barrel
+  badtrans: true
+  direct: Mu tong
+  literal: Mu tong
+- raw: 走马
+  result: Gallop
+  badtrans: true
+  direct: Zou ma
+  literal: Zou ma
+- raw: 远行
+  result: Long journey
+  badtrans: true
+  direct: Yuan xing
+  literal: Yuan xing
+- raw: 状元
+  result: Top scholar
+  badtrans: true
+  direct: Zhuang yuan
+  literal: Zhuang yuan
 
 # Questions
 - raw: 戒定慧
@@ -641,6 +787,16 @@
   literal: Yuan Yin
 
 # Names
+- raw: 行慈
+  result: Xing Ci
+  badtrans: true
+  direct: Practice kindness
+  literal: Xing ci
+- raw: 相蒲
+  result: Xiang Pu
+  badtrans: true
+  direct: Xiang pu
+  literal: Xiang pu
 - raw: 全通
   result: Quan Tong
   badtrans: true
