Resizer plus items patch

--- a/Files/ManualTranslations.yaml
+++ b/Files/ManualTranslations.yaml
@@ -139,6 +139,17 @@
 - raw: 《大学》中的“八条目”包括哪些？
   result: What are the 'Eight Articles' in the 'Great Learning'?
   badtrans: true
+- raw: 气血上限
+  result: Max Lifeforce
+  badtrans: true
+  direct: Qi xue shang xian
+  literal: Qi xue shang xian
+- raw: 真气上限
+  result: Max True Qi
+  badtrans: true
+  direct: Zhen qi shang xian
+  literal: Zhen qi shang xian
+
 
 # Skills
 - raw: <color=#E7BF87>北冥玄拳：</color><color=#DADBD5>切换到<color=#FF9971>拳</color>套路后5秒内提升10%要害属性，减少5%所受伤害。</color>
