More clean up of quests

--- a/Files/Glossary.yaml
+++ b/Files/Glossary.yaml
@@ -1,4 +1,9 @@
 ﻿# Terms
+- raw: 西王爷
+  result: Western Prince
+  badtrans: true
+  direct: Xi Wang Ye
+  literal: Xi Wang Ye
 - raw: 流民  
   result: Refugee  
   badtrans: true  
@@ -2531,6 +2536,16 @@
   badtrans: true
 
 # Names
+- raw: 春晴
+  result: Chun Qing
+  badtrans: true
+  direct: Chun qing
+  literal: Chun qing
+- raw: 霍舞诗
+  result: Huo Wushi
+  badtrans: true
+  direct: Huo wu shi
+  literal: Huo wu shi
 - raw: 徐和昌  
   result: Xu Hechang  
   badtrans: true  
@@ -4305,3 +4320,13 @@
   badtrans: true
   direct: Baihe Xueha
   literal: Baihe Xueha
+- raw: 神刀斩
+  result: Divine Blade Slash
+  badtrans: true
+  direct: Shen dao zhan
+  literal: Shen dao zhan
+- raw: 七伤拳
+  result: Seven Injuries Fist
+  badtrans: true
+  direct: Qi shang quan
+  literal: Qi shang quan
