--- a/Files/Glossary.yaml
+++ b/Files/Glossary.yaml
@@ -2536,6 +2536,41 @@
   badtrans: true
 
 # Names
+- raw: 泽兰
+  result: Ze Lan
+  badtrans: true
+  direct: Ze Lan
+  literal: Ze Lan
+- raw: 戢天恩
+  result: Ji Tian'en
+  badtrans: true
+  direct: Ji Tian En
+  literal: Ji Tian En
+- raw: 袁泽洋
+  result: Yuan Zeyang
+  badtrans: true
+  direct: Yuan Ze Yang
+  literal: Yuan Ze Yang
+- raw: 长天逸
+  result: Chang Tianyi
+  badtrans: true
+  direct: Chang Tian Yi
+  literal: Chang Tian Yi
+- raw: 隋小翠
+  result: Sui Xiao Cui
+  badtrans: true
+  direct: Sui Xiao Cui
+  literal: Sui Xiao Cui
+- raw: 姒水彤
+  result: Si Shuitong
+  badtrans: true
+  direct: Si Shui Tong
+  literal: Si Shui Tong
+- raw: 姒丹
+  result: Si Dan
+  badtrans: true
+  direct: Si Dan
+  literal: Si Dan
 - raw: 春晴
   result: Chun Qing
   badtrans: true
