--- a/Files/ManualTranslations.yaml
+++ b/Files/ManualTranslations.yaml
@@ -1,4 +1,14 @@
-﻿- raw: 洗练  
+﻿- raw: 你是？
+  result: Who are you?
+  badtrans: true
+  direct: Ni shi?
+  literal: Ni shi?
+- raw: 给我住手！
+  result: Stop right there!
+  badtrans: true
+  direct: Gei wo zhu shou!
+  literal: Gei wo zhu shou!
+- raw: 洗练  
   result: Refine  
   badtrans: true  
   direct: Wash and train  
