--- a/Files/Glossary.yaml
+++ b/Files/Glossary.yaml
@@ -2536,6 +2536,36 @@
   badtrans: true
 
 # Names
+- raw: 顾池渊
+  result: Gu Chiyuan
+  badtrans: true
+  direct: Gu Chi Yuan
+  literal: Gu Chi Yuan
+- raw: 孟向阳
+  result: Meng Xiangyang
+  badtrans: true
+  direct: Meng Xiang Yang
+  literal: Meng Xiang Yang
+- raw: 王虎
+  result: Wang Hu
+  badtrans: true
+  direct: Wang Hu
+  literal: Wang Hu
+- raw: 高姑娘
+  result: Miss Gao
+  badtrans: true
+  direct: Gao gu niang
+  literal: Gao gu niang
+- raw: 高弘业
+  result: Gao Hongye
+  badtrans: true
+  direct: Gao Hong Ye
+  literal: Gao Hong Ye
+- raw: 高枫芸
+  result: Gao Fengyun
+  badtrans: true
+  direct: Gao Feng Yun
+  literal: Gao Feng Yun
 - raw: 泽兰
   result: Ze Lan
   badtrans: true
@@ -3001,8 +3031,11 @@
 - raw: 不夜京
   result: Evernight Capital
   badtrans: true
+- raw: 太初
+  result: Primordial Origin
+  badtrans: true
 - raw: 太初剑宗
-  result: Primordial Sword 
+  result: Primordial Origin Sword 
   badtrans: true
 - raw: 嵩室山
   result: Songshi Mountain
@@ -4192,7 +4225,7 @@
   direct: Loom and Shuttle Family Classics  
   literal: Jizhu Jia Jing  
 - raw: 太初参悟录  
-  result: Taichu's Book of Insight
+  result: Primordial Origin's Book of Insight
   badtrans: true  
   direct: Taichu's Book of Insight
   literal: Taichu Canwu Lu  
