--- a/Files/Glossary.yaml
+++ b/Files/Glossary.yaml
@@ -2181,6 +2181,16 @@
   badtrans: false
 
 # Titles
+- raw: 二当家
+  result: Second Boss
+  badtrans: true
+  direct: Er Dang Jia
+  literal: Er Dang Jia
+- raw: 帮主
+  result: Chief
+  badtrans: true
+  direct: Bang Zhu
+  literal: Bang Zhu
 - raw: 掌门
   result: Sect Leader
   badtrans: true
@@ -2536,6 +2546,21 @@
   badtrans: true
 
 # Name
+- raw: 杨恒
+  result: Yang Heng
+  badtrans: true
+  direct: Yang Heng
+  literal: Yang Heng
+- raw: 谢二当家
+  result: Second Boss Xie
+  badtrans: true
+  direct: Xie Er Dang Jia
+  literal: Xie Er Dang Jia
+- raw: 红中忘玄
+  result: Hongzhong Wangxuan
+  badtrans: true
+  direct: Hong Zhong Wang Xuan
+  literal: Hong Zhong Wang Xuan
 - raw: 谢元明
   result: Xie Yuanming
   badtrans: true
@@ -3382,6 +3407,11 @@
 - raw: 鸿月派
   result: Grand Moon Sect
   badtrans: true
+- raw: 鸿月帮
+  result: Grand Moon Gang
+  badtrans: true
+  direct: Hong Yue Bang
+  literal: Hong Yue Bang
 - raw: 墟海剑
   result: Abyssal Sea Sword
   badtrans: true
