--- a/Files/ManualTranslations.yaml
+++ b/Files/ManualTranslations.yaml
@@ -1,4 +1,9 @@
-﻿- raw: 你是？
+﻿- raw: 安心走吧。
+  result: Go with peace of mind.
+  badtrans: true
+  direct: An xin zou ba.
+  literal: An xin zou ba.
+- raw: 你是？
   result: Who are you?
   badtrans: true
   direct: Ni shi?
@@ -814,6 +819,11 @@
   literal: Yan Er Bi
 
 # Look like names
+- raw: 辛呈
+  result: Xin Cheng
+  badtrans: true
+  direct: Xin Cheng
+  literal: Xin Cheng
 - raw: 流光  
   result: Liu Guang
   badtrans: true  
@@ -836,6 +846,21 @@
   literal: Yuan Yin
 
 # Names
+- raw: 随秋双
+  result: Sui Qiushuang
+  badtrans: true
+  direct: Sui Qiu Shuang
+  literal: Sui Qiu Shuang
+- raw: 元知
+  result: Yuan Zhi
+  badtrans: true
+  direct: Yuan Zhi
+  literal: Yuan Zhi
+- raw: 宋书意
+  result: Song Shuyi
+  badtrans: true
+  direct: Song Shu Yi
+  literal: Song Shu Yi
 - raw: 行慈
   result: Xing Ci
   badtrans: true
