--- a/Files/ManualTranslations.yaml
+++ b/Files/ManualTranslations.yaml
@@ -1,5 +1,10 @@
-﻿- raw: 安心走吧。
-  result: Go with peace of mind.
+﻿- raw: 蛊魅易惑
+  result: Poison deceives easily
+  badtrans: true
+  direct: Gu Mei Yi Huo
+  literal: Gu Mei Yi Huo
+- raw: 安心走吧。
+  result: Go with peace of mind
   badtrans: true
   direct: An xin zou ba.
   literal: An xin zou ba.
