--- a/Files/Glossary.yaml
+++ b/Files/Glossary.yaml
@@ -2557,7 +2557,37 @@
   result: Gao Family
   badtrans: true
 
-# Name
+# Names
+- raw: 行觉
+  result: Xing Jue
+  badtrans: true
+  direct: Xing Jue
+  literal: Xing Jue
+- raw: 宁贵妃
+  result: Noble Consort Ning
+  badtrans: true
+  direct: Ning Gui Fei
+  literal: Ning Gui Fei
+- raw: 温艺
+  result: Wen Yi
+  badtrans: true
+  direct: Wen Yi
+  literal: Wen Yi
+- raw: 赵伸
+  result: Zhao Shen
+  badtrans: true
+  direct: Zhao Shen
+  literal: Zhao Shen
+- raw: 香荷
+  result: Xiang He
+  badtrans: true
+  direct: Xiang He
+  literal: Xiang He
+- raw: 徐和昌
+  result: Xu Hechang
+  badtrans: true
+  direct: Xu He Chang
+  literal: Xu He Chang
 - raw: 乐竹芦
   result: Le Zhulu
   badtrans: true
@@ -3090,6 +3120,16 @@
   literal: Li San wen  
 
 # Factions & Places
+- raw: 济和烟花厂
+  result: Jihe Fireworks Factory
+  badtrans: true
+  direct: Ji He Yan Hua Chang
+  literal: Ji He Yan Hua Chang
+- raw: 济和烟花铺
+  result: Jihe Fireworks Shop
+  badtrans: true
+  direct: Ji He Yan Hua Pu
+  literal: Ji He Yan Hua Pu
 - raw: 常守阁
   result: Chang Shou Pavilion
   badtrans: true
