--- a/Files/ManualTranslations.yaml
+++ b/Files/ManualTranslations.yaml
@@ -1,4 +1,19 @@
-﻿- raw: 蛊魅易惑
+﻿- raw: 为何会这样问？
+  result: Why would you ask this?
+  badtrans: true
+  direct: Wei he hui zhe yang wen
+  literal: Wei he hui zhe yang wen
+- raw: 直接抢夺
+  result: Take by force
+  badtrans: true
+  direct: Zhi Jie Qiang Duo
+  literal: Zhi Jie Qiang Duo
+- raw: 不管它
+  result: Let it be
+  badtrans: true
+  direct: Bu Guan Ta
+  literal: Bu Guan Ta
+- raw: 蛊魅易惑
   result: Poison deceives easily
   badtrans: true
   direct: Gu Mei Yi Huo
@@ -851,6 +866,11 @@
   literal: Yuan Yin
 
 # Names
+- raw: 许包
+  result: Xu Bao
+  badtrans: true
+  direct: Xu Bao
+  literal: Xu Bao
 - raw: 随秋双
   result: Sui Qiushuang
   badtrans: true
